--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
 agp = "9.0.0"
 coreKtx = "1.17.0"
-junit = "4.13.2"
+#junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 junitJupiter = "6.0.2"
 appcompat = "1.7.1"
-activity = "1.12.3"
+activity = "1.12.4"
 constraintlayout = "2.2.1"
 googleMaterial = "1.14.0-alpha09"
 lifecycle = "2.10.0"
@@ -19,7 +19,7 @@ androidxBiometric = "1.4.0-alpha05"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-junit = { group = "junit", name = "junit", version.ref = "junit" }
+#junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junitJupiter" }
